--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "Betado",
         "escaparlas",
+        "modificándolo",
         "pais",
         "Paola",
         "reutilizable"
