--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "modificándolo",
         "pais",
         "Paola",
-        "reutilizable"
+        "reutilizable",
+        "rollupjs"
     ]
 }
