rename repository test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "Paola",
         "reutilizable",
         "rollupjs"
-    ]
+    ],
+    "terminal.integrated.defaultProfile.windows": "Windows PowerShell"
 }
